--- a/app/src/main/res/layout/activity_main_interface.xml
+++ b/app/src/main/res/layout/activity_main_interface.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/app_background"
-    tools:context="isabel.cl.app_bibliotecas_publicas.MainInterface">
+    tools:context="isabel.cl.appbibliotecaspublicas.MainInterface">
 
     <TextView
         android:layout_width="wrap_content"
