--- a/app/src/main/res/layout/activity_options_interface.xml
+++ b/app/src/main/res/layout/activity_options_interface.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/app_background"
-    tools:context="isabel.cl.app_bibliotecas_publicas.OptionsInterface">
+    tools:context="isabel.cl.appbibliotecaspublicas.OptionsInterface">
 
     <Button
         android:layout_width="match_parent"
