this commit is the addition of new interfaces and the map configuration whit the users gps current location

--- a/app/src/main/res/layout/activity_main_interface.xml
+++ b/app/src/main/res/layout/activity_main_interface.xml
@@ -31,7 +31,8 @@
         android:textSize="26dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:background="#ff9600" />
+        android:background="#ff9600"
+        android:onClick="goOptions" />
 
     <ImageView
         android:layout_width="wrap_content"
