--- a/app/src/main/res/layout/activity_options_interface.xml
+++ b/app/src/main/res/layout/activity_options_interface.xml
@@ -18,7 +18,9 @@
         android:id="@+id/button"
         android:layout_above="@+id/button2"
         android:layout_alignStart="@+id/button2"
-        android:layout_marginBottom="75dp" />
+        android:layout_marginBottom="75dp"
+        android:onClick="goLibraryMap"
+        android:nestedScrollingEnabled="false" />
 
     <Button
         android:layout_width="match_parent"
