commit: filter by commune and neighborhood implementation

--- a/app/src/main/res/layout/activity_see_library_info.xml
+++ b/app/src/main/res/layout/activity_see_library_info.xml
@@ -25,7 +25,7 @@
 
     <Spinner
         android:id="@+id/comboLibrary"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"></Spinner>
