--- a/app/src/main/res/layout/activity_library_information_interface.xml
+++ b/app/src/main/res/layout/activity_library_information_interface.xml
@@ -24,10 +24,9 @@
         android:textAlignment="center" />
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/comboFilterResult"
-        android:layout_marginTop="40dp"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true" />
 
@@ -37,11 +36,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="ID"
         android:id="@+id/libraryID"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
         android:textColor="#0d0c0c"
-        android:textSize="23dp"
-        android:typeface="serif" />
+        android:textSize="20dp"
+        android:typeface="serif"
+        android:layout_above="@+id/libraryNAME"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,11 +48,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Nombre"
         android:id="@+id/libraryNAME"
-        android:layout_below="@+id/libraryID"
-        android:layout_alignParentStart="true"
         android:textColor="#060505"
-        android:textSize="23dp"
-        android:typeface="serif" />
+        android:textSize="20dp"
+        android:typeface="serif"
+        android:layout_above="@+id/libraryTEL"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,11 +60,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Telefóno"
         android:id="@+id/libraryTEL"
-        android:layout_below="@+id/libraryNAME"
-        android:layout_alignParentStart="true"
-        android:textSize="23dp"
+        android:textSize="20dp"
         android:textColor="#0b0b0b"
-        android:typeface="serif" />
+        android:typeface="serif"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -73,11 +72,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Dirección"
         android:id="@+id/libraryADD"
-        android:layout_below="@+id/libraryTEL"
-        android:layout_alignParentStart="true"
-        android:textSize="23dp"
+        android:textSize="20dp"
         android:textColor="#181717"
-        android:typeface="serif" />
+        android:typeface="serif"
+        android:layout_below="@+id/libraryTEL"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,12 +84,12 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="param1"
         android:id="@+id/typeReceiver"
-        android:layout_below="@+id/libraryADD"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp"
         android:typeface="serif"
         android:textSize="22dp"
-        android:textColor="#060606" />
+        android:textColor="#060606"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="78dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -103,5 +102,52 @@
         android:typeface="serif"
         android:textSize="22dp"
         android:textColor="#080808" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Correo"
+        android:id="@+id/libraryMAIL"
+        android:textColor="#090909"
+        android:textSize="20dp"
+        android:typeface="serif"
+        android:layout_below="@+id/libraryADD"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Link"
+        android:id="@+id/libraryLINK"
+        android:layout_below="@+id/libraryMAIL"
+        android:layout_alignParentStart="true"
+        android:onClick="goLink"
+        android:textColor="#173fb4"
+        android:textSize="19dp"
+        android:typeface="serif" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enviar Correo"
+        android:background="#ff9600"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:typeface="serif"
+        android:onClick="doMail" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salir"
+        android:background="#ff9600"
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignParentEnd="true"
+        android:typeface="serif"
+        android:onClick="doExit" />
 
 </RelativeLayout>
