--- a/app/src/main/res/layout/activity_filter_options_interface.xml
+++ b/app/src/main/res/layout/activity_filter_options_interface.xml
@@ -33,7 +33,8 @@
         android:textSize="20dp"
         android:layout_below="@+id/filterOptionsView"
         android:layout_centerHorizontal="true"
-        android:onClick="goFilterByTH" />
+        android:onClick="goFilterByTH"
+        android:typeface="serif" />
 
     <Button
         android:layout_width="match_parent"
@@ -45,7 +46,8 @@
         android:textSize="20dp"
         android:layout_below="@+id/btTypeSchedule"
         android:layout_alignStart="@+id/btTypeSchedule"
-        android:onClick="goFilterByCB" />
+        android:onClick="goFilterByCB"
+        android:typeface="serif" />
 
     <Button
         android:layout_width="match_parent"
@@ -57,5 +59,6 @@
         android:textSize="20dp"
         android:layout_below="@+id/btCommuneNeighborhood"
         android:layout_alignStart="@+id/btCommuneNeighborhood"
-        android:onClick="goOptions" />
+        android:onClick="goOptions"
+        android:typeface="serif" />
 </RelativeLayout>
